--- a/src/encuestas/hnk-encuesta.html
+++ b/src/encuestas/hnk-encuesta.html
@@ -4,7 +4,7 @@
 <link rel="import" href="hnk-encuesta-test.html">
 
 <link rel="import" href="../util/hnk-base.html">
-<link rel="import" href="../util/hnk-config.html">
+<link rel="import" href="../util/hnk-spinner.html">
 <link rel="import" href="../util/shared-styles.html">
 
 <dom-module id="hnk-encuesta">
