--- a/src/pages/hnk-encuesta-page.html
+++ b/src/pages/hnk-encuesta-page.html
@@ -76,7 +76,7 @@
                 behaviors: [hnk.BaseBehavior, hnk.ConfigBehavior, hnk.SpinnerBehavior],
                 properties: {
                     urlEncuesta: String,
-                    encuesta: Object,
+                    encuesta: Object
                 },
                 observers: ['_observerRouteData(routeData)'],
                 _observerRouteData: function(routeData) {
