--- a/src/util/custom-style.html
+++ b/src/util/custom-style.html
@@ -5,9 +5,9 @@
         margin: 0;
     }
     body {
-        background-color: greenyellow;
-        background-image: url(/images/heineken-mini3.png);
-        background-position: -8px -4px;
+        _background-color: greenyellow;
+        _background-image: url(/images/heineken-mini3.png);
+        _background-position: -8px -4px;
         margin: 0;
     }
 </style>
