--- a/src/util/shared-styles.html
+++ b/src/util/shared-styles.html
@@ -14,7 +14,7 @@
             --primary-text-color: white;
             --primary-background-color: red;
             --secondary-text-color: black;
-//            --disabled-text-color: white;
+            --disabled-text-color2: white;
 //            --divider-color: white;
 //            --error-color: white;
 
