--- a/src/encuestas-heineken-app/encuestas-heineken-app.html
+++ b/src/encuestas-heineken-app/encuestas-heineken-app.html
@@ -25,6 +25,9 @@
             :host {
                 display: block;
              }
+            iron-pages {
+                margin-top: -4px;
+            }
         </style>
 
         <!-- app-location binds to the app's URL -->
