--- a/src/util/shared-styles.html
+++ b/src/util/shared-styles.html
@@ -18,6 +18,8 @@
 //            --divider-color: white;
 //            --error-color: white;
 
+            --size-icono: 64px;
+
             --mixin-texto: {
                  @apply(--paper-font-common-base);
              };
@@ -40,10 +42,6 @@
                 border-radius: 5px;
                 @apply(--mixin-fondo);
             };
-            --image-size: {
-                 width: 64px;
-                 height: 64px;
-             };
             --scrollable: {
                  height: 100%;
                  overflow: auto;
